generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
}

/**
 * =========================
 * ENUMS
 * =========================
 */

enum UserRole {
  JOURNALIST
  ADMIN
}

enum UserStatus {
  ACTIVE
  DISABLED
}

enum InputType {
  TEXT
  URL
  IMAGE
}

enum VerificationStatus {
  PROCESSING
  COMPLETED
  FAILED
}

enum SourceAgreement {
  HIGH
  MEDIUM
  LOW
}

enum RecommendedAction {
  READY_FOR_EDITORIAL_REVIEW
  DO_NOT_PUBLISH_YET
  NEEDS_MANUAL_REVIEW
}

enum EvidenceAgreement {
  SUPPORTS
  CONTRADICTS
  PARTIAL
  UNKNOWN
}

enum RiskSeverity {
  LOW
  MEDIUM
  HIGH
}

enum RiskSignalType {
  NO_RELEVANT_EVIDENCE
  CONTRADICTORY_EVIDENCE
  LOW_SOURCE_AGREEMENT
  PROVIDER_UNAVAILABLE
  OCR_UNCERTAINTY
  UNKNOWN_SOURCE
  EMOTIONAL_LANGUAGE
  RECENT_BREAKING_CLAIM
  SOURCE_CONTENT_UNAVAILABLE
}

enum AuditEventType {
  USER_REGISTERED
  USER_LOGGED_IN
  USER_LOGGED_OUT
  SESSION_REFRESHED
  FILE_UPLOADED
  VERIFICATION_CREATED
  INPUT_PREPROCESSED
  CLAIM_EXTRACTED
  EVIDENCE_SEARCH_STARTED
  EVIDENCE_SEARCH_COMPLETED
  EVIDENCE_SEARCH_FAILED
  RISK_ANALYSIS_COMPLETED
  ANALYSIS_REPORT_GENERATED
  VERIFICATION_FAILED
}

/**
 * =========================
 * MODELS
 * =========================
 */

model User {
  id           String     @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name         String     @db.VarChar(150)
  email        String     @unique(map: "users_email_unique") @db.VarChar(255)
  passwordHash String     @map("password_hash")
  role         UserRole   @default(JOURNALIST)
  status       UserStatus @default(ACTIVE)
  createdAt    DateTime   @default(now()) @map("created_at")
  updatedAt    DateTime   @updatedAt @map("updated_at")
  deletedAt    DateTime?  @map("deleted_at")

  refreshTokens     RefreshToken[]
  uploadedFiles     UploadedFile[]
  verificationCases VerificationCase[]
  auditLogs         AuditLog[]

  @@index([role], map: "users_role_idx")
  @@index([status], map: "users_status_idx")
  @@map("users")
}

model RefreshToken {
  id        String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId    String    @map("user_id") @db.Uuid
  tokenHash String    @unique(map: "refresh_tokens_token_hash_unique") @map("token_hash")
  expiresAt DateTime  @map("expires_at")
  revokedAt DateTime? @map("revoked_at")
  createdAt DateTime  @default(now()) @map("created_at")

  user User @relation(fields: [userId], references: [id], onDelete: Cascade)

  @@index([userId], map: "refresh_tokens_user_id_idx")
  @@index([expiresAt], map: "refresh_tokens_expires_at_idx")
  @@map("refresh_tokens")
}

model UploadedFile {
  id               String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  ownerUserId      String    @map("owner_user_id") @db.Uuid
  originalFileName String    @map("original_file_name") @db.VarChar(255)
  mimeType         String    @map("mime_type") @db.VarChar(100)
  sizeBytes        Int       @map("size_bytes")
  storagePath      String    @map("storage_path")
  sha256Hash       String    @map("sha256_hash") @db.VarChar(64)
  createdAt        DateTime  @default(now()) @map("created_at")
  deletedAt        DateTime? @map("deleted_at")

  owner             User               @relation(fields: [ownerUserId], references: [id], onDelete: Cascade)
  verificationCases VerificationCase[]

  @@index([ownerUserId], map: "uploaded_files_owner_idx")
  @@index([sha256Hash], map: "uploaded_files_hash_idx")
  @@map("uploaded_files")
}

model VerificationCase {
  id                   String             @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId               String             @map("user_id") @db.Uuid
  inputType            InputType          @map("input_type")
  rawInput             String?            @map("raw_input")
  uploadedFileId       String?            @map("uploaded_file_id") @db.Uuid
  originalInputPreview String             @map("original_input_preview")
  extractedClaim       String?            @map("extracted_claim")
  status               VerificationStatus @default(PROCESSING)
  evidenceScore        Int?               @map("evidence_score")
  riskScore            Int?               @map("risk_score")
  sourceAgreement      SourceAgreement?   @map("source_agreement")
  recommendedAction    RecommendedAction? @map("recommended_action")
  recommendationReason String?            @map("recommendation_reason")
  createdAt            DateTime           @default(now()) @map("created_at")
  updatedAt            DateTime           @updatedAt @map("updated_at")
  completedAt          DateTime?          @map("completed_at")
  failedAt             DateTime?          @map("failed_at")

  user         User          @relation(fields: [userId], references: [id], onDelete: Cascade)
  uploadedFile UploadedFile? @relation(fields: [uploadedFileId], references: [id])

  evidenceResults EvidenceResult[]
  riskSignals     RiskSignal[]
  auditLogs       AuditLog[]

  @@index([userId, createdAt], map: "verification_cases_user_created_idx")
  @@index([status], map: "verification_cases_status_idx")
  @@index([recommendedAction], map: "verification_cases_recommended_action_idx")
  @@index([uploadedFileId], map: "verification_cases_file_idx")
  @@map("verification_cases")
}

model EvidenceResult {
  id             String            @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  caseId         String            @map("case_id") @db.Uuid
  title          String
  sourceName     String            @map("source_name") @db.VarChar(255)
  sourceUrl      String            @map("source_url")
  publisher      String?           @db.VarChar(255)
  publishedAt    DateTime?         @map("published_at")
  summary        String
  relevanceScore Int               @map("relevance_score")
  agreement      EvidenceAgreement @default(UNKNOWN)
  provider       String            @db.VarChar(100)
  createdAt      DateTime          @default(now()) @map("created_at")

  verificationCase VerificationCase @relation(fields: [caseId], references: [id], onDelete: Cascade)

  @@unique([caseId, sourceUrl], map: "evidence_case_source_url_unique")
  @@index([caseId], map: "evidence_case_idx")
  @@index([sourceUrl], map: "evidence_source_url_idx")
  @@index([provider], map: "evidence_provider_idx")
  @@index([agreement], map: "evidence_agreement_idx")
  @@map("evidence_results")
}

model RiskSignal {
  id          String         @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  caseId      String         @map("case_id") @db.Uuid
  type        RiskSignalType
  severity    RiskSeverity
  description String
  createdAt   DateTime       @default(now()) @map("created_at")

  verificationCase VerificationCase @relation(fields: [caseId], references: [id], onDelete: Cascade)

  @@unique([caseId, type], map: "risk_signals_case_type_unique")
  @@index([caseId], map: "risk_signals_case_idx")
  @@index([type], map: "risk_signals_type_idx")
  @@index([severity], map: "risk_signals_severity_idx")
  @@map("risk_signals")
}

model AuditLog {
  id        String         @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  caseId    String?        @map("case_id") @db.Uuid
  userId    String?        @map("user_id") @db.Uuid
  eventType AuditEventType @map("event_type")
  message   String
  traceId   String         @map("trace_id") @db.VarChar(100)
  metadata  Json?
  createdAt DateTime       @default(now()) @map("created_at")

  user             User?             @relation(fields: [userId], references: [id])
  verificationCase VerificationCase? @relation(fields: [caseId], references: [id], onDelete: Cascade)

  @@index([caseId, createdAt], map: "audit_case_created_idx")
  @@index([userId], map: "audit_user_idx")
  @@index([traceId], map: "audit_trace_idx")
  @@index([eventType], map: "audit_event_type_idx")
  @@map("audit_logs")
}

model FactCheckCache {
  id              String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  cacheKey        String   @unique(map: "fact_check_cache_key_unique") @map("cache_key") @db.VarChar(255)
  normalizedClaim String   @map("normalized_claim")
  provider        String   @db.VarChar(100)
  responseData    Json     @map("response_data")
  expiresAt       DateTime @map("expires_at")
  createdAt       DateTime @default(now()) @map("created_at")
  updatedAt       DateTime @updatedAt @map("updated_at")

  @@index([expiresAt], map: "fact_check_cache_expires_idx")
  @@index([provider], map: "fact_check_cache_provider_idx")
  @@map("fact_check_cache")
}
