Project ia_detector {
  database_type: "PostgreSQL"
  Note: "Database model for IA Detector MVP. Supports users, refresh tokens, uploaded files, verification cases, evidence results, risk signals, audit logs, and normalized fact-check cache. The system stores editorial analysis reports, not TRUE/FALSE verdicts."
}

/* =========================
   ENUMS
========================= */

Enum user_role {
  JOURNALIST
  ADMIN
}

Enum user_status {
  ACTIVE
  DISABLED
}

Enum input_type {
  TEXT
  URL
  IMAGE
}

Enum verification_status {
  PROCESSING
  COMPLETED
  FAILED
}

Enum source_agreement {
  HIGH
  MEDIUM
  LOW
}

Enum recommended_action {
  READY_FOR_EDITORIAL_REVIEW
  DO_NOT_PUBLISH_YET
  NEEDS_MANUAL_REVIEW
}

Enum evidence_agreement {
  SUPPORTS
  CONTRADICTS
  PARTIAL
  UNKNOWN
}

Enum risk_severity {
  LOW
  MEDIUM
  HIGH
}

Enum risk_signal_type {
  NO_RELEVANT_EVIDENCE
  CONTRADICTORY_EVIDENCE
  LOW_SOURCE_AGREEMENT
  PROVIDER_UNAVAILABLE
  OCR_UNCERTAINTY
  UNKNOWN_SOURCE
  EMOTIONAL_LANGUAGE
  RECENT_BREAKING_CLAIM
  SOURCE_CONTENT_UNAVAILABLE
}

Enum audit_event_type {
  USER_REGISTERED
  USER_LOGGED_IN
  USER_LOGGED_OUT
  SESSION_REFRESHED
  FILE_UPLOADED
  VERIFICATION_CREATED
  INPUT_PREPROCESSED
  CLAIM_EXTRACTED
  EVIDENCE_SEARCH_STARTED
  EVIDENCE_SEARCH_COMPLETED
  EVIDENCE_SEARCH_FAILED
  RISK_ANALYSIS_COMPLETED
  ANALYSIS_REPORT_GENERATED
  VERIFICATION_FAILED
}

/* =========================
   USERS
========================= */

Table users {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  name varchar(150) [not null]
  email varchar(255) [not null]
  password_hash text [not null]
  role user_role [not null, default: 'JOURNALIST']
  status user_status [not null, default: 'ACTIVE']
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  deleted_at timestamp

  indexes {
    email [unique, name: "users_email_unique"]
    role [name: "users_role_idx"]
    status [name: "users_status_idx"]
  }

  Note: "Stores journalist and admin accounts. Passwords must be stored as hashes only. The status field supports inactive or blocked login behavior."
}

/* =========================
   REFRESH TOKENS
========================= */

Table refresh_tokens {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid [not null]
  token_hash text [not null]
  expires_at timestamp [not null]
  revoked_at timestamp
  created_at timestamp [not null, default: `now()`]

  indexes {
    user_id [name: "refresh_tokens_user_id_idx"]
    token_hash [unique, name: "refresh_tokens_token_hash_unique"]
    expires_at [name: "refresh_tokens_expires_at_idx"]
  }

  Note: "Stores hashed refresh tokens for session renewal and logout. Raw refresh tokens must never be stored. Refresh token rotation revokes the previous token hash and stores a new one."
}

/* =========================
   UPLOADED FILES
========================= */

Table uploaded_files {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  owner_user_id uuid [not null]
  original_file_name varchar(255) [not null]
  mime_type varchar(100) [not null]
  size_bytes int [not null]
  storage_path text [not null]
  sha256_hash varchar(64) [not null]
  created_at timestamp [not null, default: `now()`]
  deleted_at timestamp

  indexes {
    owner_user_id [name: "uploaded_files_owner_idx"]
    sha256_hash [name: "uploaded_files_hash_idx"]
  }

  Note: "Stores metadata for uploaded images or screenshots. File content is stored in object storage. Allowed MIME types are image/jpeg, image/png, and image/webp. Maximum file size is 5 MB."
}

/* =========================
   VERIFICATION CASES
========================= */

Table verification_cases {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  user_id uuid [not null]
  input_type input_type [not null]
  raw_input text
  uploaded_file_id uuid
  original_input_preview text [not null]
  extracted_claim text
  status verification_status [not null, default: 'PROCESSING']
  evidence_score int
  risk_score int
  source_agreement source_agreement
  recommended_action recommended_action
  recommendation_reason text
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]
  completed_at timestamp
  failed_at timestamp

  indexes {
    (user_id, created_at) [name: "verification_cases_user_created_idx"]
    status [name: "verification_cases_status_idx"]
    recommended_action [name: "verification_cases_recommended_action_idx"]
    uploaded_file_id [name: "verification_cases_file_idx"]
  }

  Note: "Main verification record. Status is technical and must be PROCESSING, COMPLETED, or FAILED. Editorial recommendation is stored separately in recommended_action. The system must never store TRUE/FALSE as final output. evidence_score and risk_score are integer values from 0 to 100 when present."
}

/* =========================
   EVIDENCE RESULTS
========================= */

Table evidence_results {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  case_id uuid [not null]
  title text [not null]
  source_name varchar(255) [not null]
  source_url text [not null]
  publisher varchar(255)
  published_at timestamp
  summary text [not null]
  relevance_score int [not null]
  agreement evidence_agreement [not null, default: 'UNKNOWN']
  provider varchar(100) [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (case_id, source_url) [unique, name: "evidence_case_source_url_unique"]
    case_id [name: "evidence_case_idx"]
    source_url [name: "evidence_source_url_idx"]
    provider [name: "evidence_provider_idx"]
    agreement [name: "evidence_agreement_idx"]
  }

  Note: "Stores normalized evidence for one verification case. Evidence contributes to scoring and source agreement, but does not produce a truth/falsity verdict by itself. relevance_score is expected to be 0 to 100."
}

/* =========================
   RISK SIGNALS
========================= */

Table risk_signals {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  case_id uuid [not null]
  type risk_signal_type [not null]
  severity risk_severity [not null]
  description text [not null]
  created_at timestamp [not null, default: `now()`]

  indexes {
    (case_id, type) [unique, name: "risk_signals_case_type_unique"]
    case_id [name: "risk_signals_case_idx"]
    type [name: "risk_signals_type_idx"]
    severity [name: "risk_signals_severity_idx"]
  }

  Note: "Stores structured risk indicators shown on the result page. A verification case should not store duplicate risk signal types. NO_RELEVANT_EVIDENCE must not be stored when providerStatus=UNAVAILABLE and cacheStatus=MISS."
}

/* =========================
   AUDIT LOGS
========================= */

Table audit_logs {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  case_id uuid
  user_id uuid
  event_type audit_event_type [not null]
  message text [not null]
  trace_id varchar(100) [not null]
  metadata jsonb
  created_at timestamp [not null, default: `now()`]

  indexes {
    (case_id, created_at) [name: "audit_case_created_idx"]
    user_id [name: "audit_user_idx"]
    trace_id [name: "audit_trace_idx"]
    event_type [name: "audit_event_type_idx"]
  }

  Note: "Append-only audit table for traceability. Must not store secrets, API keys, passwords, raw refresh tokens, or provider credentials. GET /api/audit/:caseId is read-only and must not create audit events."
}

/* =========================
   FACT CHECK CACHE
========================= */

Table fact_check_cache {
  id uuid [pk, not null, default: `gen_random_uuid()`]
  cache_key varchar(255) [not null]
  normalized_claim text [not null]
  provider varchar(100) [not null]
  response_data jsonb [not null]
  expires_at timestamp [not null]
  created_at timestamp [not null, default: `now()`]
  updated_at timestamp [not null, default: `now()`]

  indexes {
    cache_key [unique, name: "fact_check_cache_key_unique"]
    expires_at [name: "fact_check_cache_expires_idx"]
    provider [name: "fact_check_cache_provider_idx"]
  }

  Note: "Caches normalized provider evidence for repeated fact-check queries. response_data stores normalized evidence used by the application, not raw provider responses. Expired cache must not be used for normal cache hits; it may be used only as STALE_HIT fallback when providerStatus=UNAVAILABLE."
}

/* =========================
   RELATIONSHIPS
========================= */

Ref: refresh_tokens.user_id > users.id [delete: cascade]

Ref: uploaded_files.owner_user_id > users.id [delete: cascade]

Ref: verification_cases.user_id > users.id [delete: cascade]

Ref: verification_cases.uploaded_file_id > uploaded_files.id

Ref: evidence_results.case_id > verification_cases.id [delete: cascade]

Ref: risk_signals.case_id > verification_cases.id [delete: cascade]

Ref: audit_logs.user_id > users.id

Ref: audit_logs.case_id > verification_cases.id [delete: cascade]